# cdatastructures

./: .gitignore  CMakeLists.txt  note.txt
src/: bai3.c  dsarraylist.c  dsavltree.c
